# GreenGateway

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  publish-image.yml  secrets.yml
admin-ui/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
admin-ui/e2e/: create-rule-from-traffic.screenshots.ts  rule-editor.screenshots.ts
admin-ui/src/: App.css  App.test.tsx  App.tsx  main.tsx
admin-ui/src/lib/: api.ts  audit.test.ts  audit.ts  auth.ts  config.test.ts  config.ts  eventStream.ts  openapiTools.ts  policy.ts  policyHistory.ts  principals.test.ts  principals.ts  signals.ts  status.ts  tokens.test.ts  tokens.ts  traffic.ts
admin-ui/src/views/: IdentitiesView.test.tsx  IdentitiesView.tsx  LiveTail.test.tsx  LiveTail.tsx  LogExplorer.test.tsx  LogExplorer.tsx  OpenApiToolsView.test.tsx  OpenApiToolsView.tsx  PolicyHistoryView.test.tsx  PolicyHistoryView.tsx  PrincipalDetail.test.tsx  PrincipalDetail.tsx  RuleEditor.test.tsx  RuleEditor.tsx  RuleTable.test.tsx  RuleTable.tsx  RuleWorkspaceNav.tsx  ShadowReviewView.test.tsx  ShadowReviewView.tsx  SignalsView.test.tsx  SignalsView.tsx  StatusPage.test.tsx  StatusPage.tsx  TokensView.test.tsx  TokensView.tsx  TrafficEndpointDetail.test.tsx  TrafficEndpointDetail.tsx  TrafficInventory.test.tsx  TrafficInventory.tsx  trafficBadges.tsx
admin-ui/tests/: policy-history.screenshot.spec.ts  rule-table.screenshot.spec.ts  shadow-review.screenshot.spec.ts  traffic-inventory.screenshot.spec.ts
cloudflare/src/: config.test.ts  config.ts  index.ts
dev/: echo-server.py  policy.README.md  policy.json  tools.json
dev/jwks/: README.md  dev-signing-key.pem  jwks.json
docs/: RELEASING.md  architecture.md  configuration.md
docs/adr/: 0001-http-upstreams-only.md  0002-single-tenant-per-deployment.md  0003-admin-ui-stack.md  0004-policy-studio-authority-and-evidence.md  0005-production-proxy-data-plane.md  README.md
docs/auth/: README.md  auth0.md  entra-id.md  keycloak.md  okta.md
docs/deployment/: cloudflare.md
docs/examples/: policy.starter.README.md  policy.starter.json  tools.starter.json
docs/schemas/: audit_event.v0.schema.json  policy.v0.schema.json  tools.v0.schema.json
docs/superpowers/plans/: 2026-07-20-policy-studio-adr-threat-model.md  2026-07-20-production-proxy-data-plane-pr1.md
docs/superpowers/specs/: 2026-07-20-policy-studio-adr-threat-model-design.md  2026-07-20-production-proxy-data-plane-design.md
gateway/: Cargo.toml  build.rs
gateway/src/: client_ip.rs  config.rs  egress.rs  lifecycle.rs  main.rs  mcp.rs  metrics.rs  path_match.rs  upstream_route.rs
gateway/src/audit/: event.rs  mod.rs  query.rs  redact.rs  sink.rs  sqlite_sink.rs
gateway/src/auth/: chain.rs  claims.rs  cookie_session_validator.rs  jwt.rs  mod.rs  oidc.rs  oidc_login.rs  principal.rs  principal_directory.rs  protected_resource.rs  service_token_validator.rs  tokens.rs  validator.rs
gateway/src/discovery/: aggregator.rs  mod.rs  openapi.rs  path_template.rs  query.rs  signals.rs  suggestions.rs
gateway/src/middleware/: auth.rs  bearer.rs  csrf.rs  decision.rs  headers.rs  mod.rs  observation.rs  rate_limit.rs  rbac.rs  validate.rs
gateway/src/proxy/: forward.rs  health.rs  mod.rs
gateway/src/rbac/: engine.rs  matcher.rs  mod.rs  policy.rs  policy_history.rs  rule.rs
gateway/src/tools/: definitions.rs  executor.rs  mcp_upstream.rs  mod.rs  openapi.rs  runtime.rs
gateway/tests/: env_example.rs
scripts/: capture-agent-deny-demo.mjs  capture-mcp-rbac-demo.mjs  capture-shadow-mode-demo.mjs  check-egress-only.sh  generate-traffic.mjs
