[workspace]
members = ["gateway"]
resolver = "2"

[workspace.package]
edition = "2021"
license-file = "LICENSE"

[workspace.dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.89"
axum = "0.8.9"
bytes = "1.11.0"
hex = "0.4.3"
futures-util = "0.3.31"
getrandom = "0.3.4"
http = "1.4.2"
ipnet = "2.11.0"
jsonschema = { version = "0.46.9", default-features = false }
jsonwebtoken = "9"
metrics = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }
mime_guess = "2"
notify = "8.2.0"
proptest = "1.9.0"
rcgen = "0.13.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
time = { version = "0.3.53", features = ["formatting", "parsing"] }
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "request-id", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.7"
uuid = { version = "1.20.0", features = ["v4"] }
yaml_serde = "0.10.4"
