[package]
name = "gateway"
version = "0.2.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
hex.workspace = true
http.workspace = true
ipnet.workspace = true
jsonwebtoken.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
mime_guess.workspace = true
notify.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonschema.workspace = true
proptest.workspace = true
tower.workspace = true
