[package]
name = "gateway"
version = "0.6.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hex.workspace = true
http.workspace = true
ipnet.workspace = true
jsonschema.workspace = true
jsonwebtoken.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
mime_guess.workspace = true
notify.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
proptest.workspace = true
rcgen.workspace = true
tokio-rustls.workspace = true
tower.workspace = true
