[package]
name = "gateway"
version = "1.0.1"
edition.workspace = true
license-file.workspace = true

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
getrandom.workspace = true
hex.workspace = true
http.workspace = true
ipnet.workspace = true
jsonschema.workspace = true
jsonwebtoken.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
mime_guess.workspace = true
notify.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
rmcp_reqwest = { package = "reqwest", version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
rmcp = { version = "2.1.0", features = ["client", "transport-streamable-http-client-reqwest", "transport-streamable-http-server"] }
rusqlite.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sse-stream = "0.2"
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
yaml_serde.workspace = true

[dev-dependencies]
proptest.workspace = true
rcgen.workspace = true
tokio-rustls.workspace = true
